framec_tests/language_specific/python/v3_mir/positive/forward_with_parent_mixed.frm
@target python

system S {
    machine:
        $P {
        }
        $A => $P {
            e() {
                => $^
            }
        }
        $B {
        }
}

