framec_tests/language_specific/python/v3_mir/negative/forward_invalid_head.frm
@target python

system S {
    machine:
        $A {
            e() {
                => $B
            }
        }
}

